...
                        <viewControllerLayoutGuide type="bottom" id="oUN-1D-PNx"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="O7Z-E7-JHu">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Todo Title:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aij-0G-3na">
                                <rect key="frame" x="34" y="220" width="81" height="20.5"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XqC-2P-37A">
                                <rect key="frame" x="154" y="216" width="181" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="txtTodo"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="O7Z-E7-JHu" id="OBD-OC-24V"/>
                                </connections>
                            </textField>
...
                                <date key="date" timeIntervalSinceReferenceDate="478583592.05448002">
                                    <!--2016-03-02 03:53:12 +0000-->
                                </date>
                            </datePicker>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T8Z-2G-Nbb">
                                <rect key="frame" x="34" y="124" width="50" height="50"/>
                                <state key="normal" backgroundImage="child"/>
                                <state key="selected" backgroundImage="child-selected"/>
                                <connections>
                                    <action selector="selectChild:" destination="hHo-63-Jpa" eventType="touchUpInside" id="AQc-hW-ESo"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eti-ex-PEv">
                                <rect key="frame" x="117.5" y="124" width="50" height="50"/>
                                <state key="normal" backgroundImage="phone"/>
                                <state key="selected" backgroundImage="phone-selected"/>
                                <connections>
                                    <action selector="selectPhone:" destination="hHo-63-Jpa" eventType="touchUpInside" id="qtV-si-81J"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WcW-Eu-VXt">
...
                                <connections>
                                    <action selector="selectShoppingCart:" destination="hHo-63-Jpa" eventType="touchUpInside" id="eKa-nt-2tV"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vH5-nW-Ku2">
                                <rect key="frame" x="285" y="124" width="50" height="50"/>
                                <state key="normal" backgroundImage="travel"/>
                                <state key="selected" backgroundImage="travel-selected"/>
                                <connections>
                                    <action selector="selectTravel:" destination="hHo-63-Jpa" eventType="touchUpInside" id="wWy-Yh-dOd"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LqJ-hi-KDb">
                                <rect key="frame" x="159.5" y="537" width="56" height="41"/>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Done"/>
                                <connections>
                                    <action selector="tapDone:" destination="hHo-63-Jpa" eventType="touchUpInside" id="IDj-os-DEs"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
